--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <h1>F.A.Q.</h1>
 
       <div class="pregunta">
-        <h2>1. ¿Que los hace Diferentes a otros Totoriales de Internet?</h2>
+        <h2>1. ¿Que los hace Diferentes a otros Tutoriales de Internet?</h2>
         <p>Los Tutoriales de Internet estan hechos para que todo el mundo pueda entenderlos, nosotros aparte de hacer todo el proceso por ti, indagamas mas a fondo.</p>
       </div>
 
